pi-hole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-service
  namespace: pi-hole
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.241
  externalTrafficPolicy: Local
  selector:
    app: pi-hole
  ports:
    - name: webui
      port: 80
      targetPort: 80
      protocol: TCP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
