pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-hole-service
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.home.lan
      http:
        paths: 
          - path: '/'
            pathType: Prefix
            backend: 
              service:
                name: pi-hole
                port:
                  number: 80
